other/shorturl-golang/service.yml
apiVersion: v1
kind: Service
metadata:
  name: shorturl-app
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: shorturl-app
  ports:
    - port: 8080
      targetPort: 8080
